components/markdown-styles.module.css
.markdown {
  @apply text-base leading-relaxed;
}

.markdown p,
.markdown ul,
.markdown ol,
.markdown blockquote {
  @apply my-6;
}

.markdown blockquote {
  @apply pl-4 m-4 border-l-4 border-gray-500;
}

.markdown h2 {
  @apply text-3xl mt-12 mb-4 leading-snug;
}

.markdown h3 {
  @apply text-2xl mt-8 mb-4 leading-snug;
}

.markdown h4 {
  @apply text-xl mt-4 mb-4 leading-snug;
}

.markdown ul,
.markdown ol {
  @apply mb-4 ml-8;
}

.markdown li > p,
.markdown li > ul,
.markdown li > ol {
  @apply mb-4;
}

.markdown ul {
  @apply list-disc;
}

.markdown ol {
  @apply list-decimal;
}

.markdown ol + ul {
  @apply pl-8;
}

.markdown > :first-child {
  /* Override removing top margin, causing layout shift */
  margin-top: 1.25em !important;
  margin-bottom: 1.25em !important;
}

.markdown a {
  @apply text-blue-400 hover:text-blue-600 underline;
}

.markdown hr {
  @apply border-b my-8 border-gray-300 dark:border-gray-500 rounded-full;
}

